cztctl-intellij/build/generated-src/antlr/main/com/cztctl/intellij/parser/CztctlParser.java
// Generated from com/cztctl/intellij/parser/Cztctl.g4 by ANTLR 4.13.2
package com.cztctl.intellij.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CztctlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ATDOC=1, ATHANDLER=2, ATSERVER=3, ATCRON=4, ATCRONRETRY=5, SYNTAX=6, IMPORT=7, 
		INFO=8, TYPE=9, SERVICE=10, MAP=11, STRUCT=12, INTERFACE=13, LPAREN=14, 
		RPAREN=15, LBRACE=16, RBRACE=17, LBRACK=18, RBRACK=19, ASSIGN=20, COLON=21, 
		COMMA=22, DOT=23, STAR=24, DASH=25, WS=26, COMMENT=27, LINE_COMMENT=28, 
		STRING=29, RAW_STRING=30, INT=31, ID=32;
	public static final int
		RULE_api = 0, RULE_spec = 1, RULE_syntaxLit = 2, RULE_importSpec = 3, 
		RULE_importLit = 4, RULE_importBlock = 5, RULE_importBlockValue = 6, RULE_importValue = 7, 
		RULE_infoSpec = 8, RULE_typeSpec = 9, RULE_typeLit = 10, RULE_typeBlock = 11, 
		RULE_typeLitBody = 12, RULE_typeBlockBody = 13, RULE_typeStruct = 14, 
		RULE_typeAlias = 15, RULE_typeBlockStruct = 16, RULE_typeBlockAlias = 17, 
		RULE_field = 18, RULE_normalField = 19, RULE_anonymousField = 20, RULE_dataType = 21, 
		RULE_pointerType = 22, RULE_mapType = 23, RULE_arrayType = 24, RULE_serviceSpec = 25, 
		RULE_atServer = 26, RULE_serviceApi = 27, RULE_serviceName = 28, RULE_serviceRoute = 29, 
		RULE_atDoc = 30, RULE_atHandler = 31, RULE_atCron = 32, RULE_atCronRetry = 33, 
		RULE_route = 34, RULE_routeName = 35, RULE_body = 36, RULE_kvLit = 37, 
		RULE_kvValue = 38, RULE_identifier = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"api", "spec", "syntaxLit", "importSpec", "importLit", "importBlock", 
			"importBlockValue", "importValue", "infoSpec", "typeSpec", "typeLit", 
			"typeBlock", "typeLitBody", "typeBlockBody", "typeStruct", "typeAlias", 
			"typeBlockStruct", "typeBlockAlias", "field", "normalField", "anonymousField", 
			"dataType", "pointerType", "mapType", "arrayType", "serviceSpec", "atServer", 
			"serviceApi", "serviceName", "serviceRoute", "atDoc", "atHandler", "atCron", 
			"atCronRetry", "route", "routeName", "body", "kvLit", "kvValue", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@doc'", "'@handler'", "'@server'", "'@cron'", "'@cronRetry'", 
			"'syntax'", "'import'", "'info'", "'type'", "'service'", "'map'", "'struct'", 
			"'interface{}'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "':'", 
			"','", "'.'", "'*'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ATDOC", "ATHANDLER", "ATSERVER", "ATCRON", "ATCRONRETRY", "SYNTAX", 
			"IMPORT", "INFO", "TYPE", "SERVICE", "MAP", "STRUCT", "INTERFACE", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "ASSIGN", "COLON", 
			"COMMA", "DOT", "STAR", "DASH", "WS", "COMMENT", "LINE_COMMENT", "STRING", 
			"RAW_STRING", "INT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cztctl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CztctlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApiContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CztctlParser.EOF, 0); }
		public List<SpecContext> spec() {
			return getRuleContexts(SpecContext.class);
		}
		public SpecContext spec(int i) {
			return getRuleContext(SpecContext.class,i);
		}
		public ApiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_api; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterApi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitApi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitApi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApiContext api() throws RecognitionException {
		ApiContext _localctx = new ApiContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_api);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1992L) != 0)) {
				{
				{
				setState(80);
				spec();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecContext extends ParserRuleContext {
		public SyntaxLitContext syntaxLit() {
			return getRuleContext(SyntaxLitContext.class,0);
		}
		public ImportSpecContext importSpec() {
			return getRuleContext(ImportSpecContext.class,0);
		}
		public InfoSpecContext infoSpec() {
			return getRuleContext(InfoSpecContext.class,0);
		}
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public ServiceSpecContext serviceSpec() {
			return getRuleContext(ServiceSpecContext.class,0);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_spec);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SYNTAX:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				syntaxLit();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				importSpec();
				}
				break;
			case INFO:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				infoSpec();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				typeSpec();
				}
				break;
			case ATSERVER:
			case SERVICE:
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				serviceSpec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SyntaxLitContext extends ParserRuleContext {
		public TerminalNode SYNTAX() { return getToken(CztctlParser.SYNTAX, 0); }
		public TerminalNode ASSIGN() { return getToken(CztctlParser.ASSIGN, 0); }
		public TerminalNode STRING() { return getToken(CztctlParser.STRING, 0); }
		public SyntaxLitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntaxLit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterSyntaxLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitSyntaxLit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitSyntaxLit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxLitContext syntaxLit() throws RecognitionException {
		SyntaxLitContext _localctx = new SyntaxLitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_syntaxLit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(SYNTAX);
			setState(96);
			match(ASSIGN);
			setState(97);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportSpecContext extends ParserRuleContext {
		public ImportLitContext importLit() {
			return getRuleContext(ImportLitContext.class,0);
		}
		public ImportBlockContext importBlock() {
			return getRuleContext(ImportBlockContext.class,0);
		}
		public ImportSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterImportSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitImportSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitImportSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportSpecContext importSpec() throws RecognitionException {
		ImportSpecContext _localctx = new ImportSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importSpec);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				importLit();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				importBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportLitContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(CztctlParser.IMPORT, 0); }
		public ImportValueContext importValue() {
			return getRuleContext(ImportValueContext.class,0);
		}
		public ImportLitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importLit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterImportLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitImportLit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitImportLit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportLitContext importLit() throws RecognitionException {
		ImportLitContext _localctx = new ImportLitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importLit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(IMPORT);
			setState(104);
			importValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportBlockContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(CztctlParser.IMPORT, 0); }
		public TerminalNode LPAREN() { return getToken(CztctlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CztctlParser.RPAREN, 0); }
		public List<ImportBlockValueContext> importBlockValue() {
			return getRuleContexts(ImportBlockValueContext.class);
		}
		public ImportBlockValueContext importBlockValue(int i) {
			return getRuleContext(ImportBlockValueContext.class,i);
		}
		public ImportBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterImportBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitImportBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitImportBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportBlockContext importBlock() throws RecognitionException {
		ImportBlockContext _localctx = new ImportBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(IMPORT);
			setState(107);
			match(LPAREN);
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				importBlockValue();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			setState(113);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportBlockValueContext extends ParserRuleContext {
		public ImportValueContext importValue() {
			return getRuleContext(ImportValueContext.class,0);
		}
		public ImportBlockValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importBlockValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterImportBlockValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitImportBlockValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitImportBlockValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportBlockValueContext importBlockValue() throws RecognitionException {
		ImportBlockValueContext _localctx = new ImportBlockValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importBlockValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			importValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CztctlParser.STRING, 0); }
		public ImportValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterImportValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitImportValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitImportValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportValueContext importValue() throws RecognitionException {
		ImportValueContext _localctx = new ImportValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfoSpecContext extends ParserRuleContext {
		public TerminalNode INFO() { return getToken(CztctlParser.INFO, 0); }
		public TerminalNode LPAREN() { return getToken(CztctlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CztctlParser.RPAREN, 0); }
		public List<KvLitContext> kvLit() {
			return getRuleContexts(KvLitContext.class);
		}
		public KvLitContext kvLit(int i) {
			return getRuleContext(KvLitContext.class,i);
		}
		public InfoSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infoSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterInfoSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitInfoSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitInfoSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfoSpecContext infoSpec() throws RecognitionException {
		InfoSpecContext _localctx = new InfoSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_infoSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(INFO);
			setState(120);
			match(LPAREN);
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				kvLit();
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4294975424L) != 0) );
			setState(126);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeSpecContext extends ParserRuleContext {
		public TypeLitContext typeLit() {
			return getRuleContext(TypeLitContext.class,0);
		}
		public TypeBlockContext typeBlock() {
			return getRuleContext(TypeBlockContext.class,0);
		}
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterTypeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitTypeSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitTypeSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeSpec);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				typeLit();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				typeBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeLitContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(CztctlParser.TYPE, 0); }
		public TypeLitBodyContext typeLitBody() {
			return getRuleContext(TypeLitBodyContext.class,0);
		}
		public TypeLitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeLit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterTypeLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitTypeLit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitTypeLit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeLitContext typeLit() throws RecognitionException {
		TypeLitContext _localctx = new TypeLitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_typeLit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(TYPE);
			setState(133);
			typeLitBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeBlockContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(CztctlParser.TYPE, 0); }
		public TerminalNode LPAREN() { return getToken(CztctlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CztctlParser.RPAREN, 0); }
		public List<TypeBlockBodyContext> typeBlockBody() {
			return getRuleContexts(TypeBlockBodyContext.class);
		}
		public TypeBlockBodyContext typeBlockBody(int i) {
			return getRuleContext(TypeBlockBodyContext.class,i);
		}
		public TypeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterTypeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitTypeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitTypeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeBlockContext typeBlock() throws RecognitionException {
		TypeBlockContext _localctx = new TypeBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_typeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(TYPE);
			setState(136);
			match(LPAREN);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4294975424L) != 0)) {
				{
				{
				setState(137);
				typeBlockBody();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeLitBodyContext extends ParserRuleContext {
		public TypeStructContext typeStruct() {
			return getRuleContext(TypeStructContext.class,0);
		}
		public TypeAliasContext typeAlias() {
			return getRuleContext(TypeAliasContext.class,0);
		}
		public TypeLitBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeLitBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).enterTypeLitBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CztctlListener ) ((CztctlListener)listener).exitTypeLitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CztctlVisitor ) return ((CztctlVisitor<? extends T>)visitor).visitTypeLitBody(this);
			else return visitor.visitChildren(this);
		}
	}
